[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel"
]

[project]
name = "continue_pretraining"
version = "0.1.0"
description = "LLM Continue Pretraining."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "torch",
    "datasets",
    "transformers",
    "sentencepiece",
    "wandb",
    "protobuf",
    "deepspeed",
    "accelerate"
]
